Bug 70278 - Time (Variable) field not (properly) imported from ODF
Summary: Time (Variable) field not (properly) imported from ODF
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.6.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA odf target:4.1.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-10-08 13:11 UTC by Hendre
Modified: 2013-12-10 18:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hendre 2013-10-08 13:11:26 UTC
DESCRIPTION

When creating Date Variable and contains a Time Variable field, then Time Variable field is lost when the document is reopened.

STEP

1. Insert a Date Variable field.

2. Insert a Time Variable field in the same text area as the Date Variable Field.

3. Save the document.

4. Close the document.

5. Open the document

CURRENT BEHAVIOUR

The Time Variable field is lost.

EXPECTED BEHAVIOUR

The Time Variable field must be retained.
              
Operating System: Debian
Version: 4.1.2.3 rc
Comment 1 Cor Nouws 2013-10-08 18:53:55 UTC
Hi Hendre,

thanks for the issue. I confirm this.
I see still some field, but looks empty.
Could be related to bug 70198 ??
Comment 2 Cor Nouws 2013-10-08 18:56:22 UTC
hmmm not related to bug 70198 I guess.

Should be tested when this first went wrong...
Comment 3 Cor Nouws 2013-10-08 19:14:47 UTC
I see this in 3.6.0 alpha1 for the first time.

File from 3.6.x in 3.5.7 does show the field
File from 3.5.7 in 3.6.x does _not_ show the field
  >  problem is on opening/displaying
Comment 4 Commit Notification 2013-12-10 14:32:48 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1235e694c21f6e3e000e24a176123c386ea91df1

fdo#70278: editeng: fix Time fields in Impress



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-12-10 14:37:32 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f6f072fcf7c967a1546f65da9ff15d8a5e0e81d&h=libreoffice-4-2

fdo#70278: editeng: fix Time fields in Impress


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2013-12-10 15:48:13 UTC
field not inserted on import is due to:

commit ee5fc5d25fe102c30daf7d181b8181d40b85a4f3
Author:     Kohei Yoshida <kohei.yoshida@gmail.com>
AuthorDate: Fri May 11 13:03:07 2012 -0400

    Removing EXTENDED_DATE. There is really no such thing.
    
    This can be safely substituted by the normal DATE.


then there is another problem from my sax::Converter
refactoring that causes the value of a fixed time field
in Impress to be lost on import (because what is actually
written is not valid ODF); that is fixed by commit cc407e50e8a1a74f9d1ed29d444dce9bd2e9167a.
Comment 7 Commit Notification 2013-12-10 15:48:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f890da1fd6282759c53c998566a809c9353b775&h=libreoffice-4-1

fdo#70278: editeng: fix Time fields in Impress


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-12-10 16:07:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=68e825d8c405b9cba553e7136f7e1295540df70d&h=libreoffice-4-1-4

fdo#70278: editeng: fix Time fields in Impress


It will be available already in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Cor Nouws 2013-12-10 18:24:21 UTC
thanks again!