fdo#70278: editeng: fix Time fields in Impress

Apparenty an uninitialized SvxTimeField is created instead of the
SvxExtTimeField that is needed to preserve the value and format.

(regression from ee5fc5d25fe102c30daf7d181b8181d40b85a4f3)

(cherry picked from commit 1235e694c21f6e3e000e24a176123c386ea91df1)

Conflicts:
	editeng/source/items/flditem.cxx

Change-Id: I36b16af0c143e8b5451a1925806756492dc2334e
Reviewed-on: https://gerrit.libreoffice.org/7022
Reviewed-by: Thorsten Behrens <thb@documentfoundation.org>
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
Tested-by: Kohei Yoshida <libreoffice@kohei.us>